--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-# python
+<html>
+<head>
+<meta http-equiv="Content-Language" content="zh-CN">
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
+<meta http-equiv="refresh" content="0.1;url=http://www.ddoska.net/ShopProduct-173684.html">
+<title></title>
+</head>
+<body>
+</body>
+</html>
